Aurora, sorry for leaving you so long without a proper apostrophe

--- a/sq/browser/chrome/browser/devtools/debugger.properties
+++ b/sq/browser/chrome/browser/devtools/debugger.properties
@@ -264,7 +264,7 @@ variablesEditableNameTooltip=Dyklikojeni që ta përpunoni
 
 # LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
 # in the variables list on an item with an editable value.
-variablesEditableValueTooltip=Klikojeni që t'i ndryshoni vlerën
+variablesEditableValueTooltip=Klikojeni që t’i ndryshoni vlerën
 
 # LOCALIZATION NOTE (variablesCloseButtonTooltip): The text that is displayed
 # in the variables list on an item which can be removed.
@@ -272,7 +272,7 @@ variablesCloseButtonTooltip=Klikojeni që ta hiqni
 
 # LOCALIZATION NOTE (variablesEditButtonTooltip): The text that is displayed
 # in the variables list on a getter or setter which can be edited.
-variablesEditButtonTooltip=Klikojeni që t'i jepni një vlerë
+variablesEditButtonTooltip=Klikojeni që t’i jepni një vlerë
 
 # LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
 # in a tooltip on the "open in inspector" button in the the variables list for a
