--- a/sq/browser/chrome/browser/devtools/gcli.properties
+++ b/sq/browser/chrome/browser/devtools/gcli.properties
@@ -49,7 +49,7 @@ cliUnknownCommand=Urdhër i Pavlefshëm
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
 # filename
-fileErrNotExists='%1$S' s'ekziston
+fileErrNotExists='%1$S' s’ekziston
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that exists, but should not (e.g. for use with File->Save As) %1$S is a
@@ -208,7 +208,7 @@ commandParseError=Gabim përtypjeje te rresht urdhrash
 # parameter. See localization comment for 'connect' for an explanation about
 # 'prefix'.
 contextDesc=Përqendrohu te një grup urdhrash
-contextManual=Caktoni një parashtesë parazgjedhje për urdhra të ardhshëm. Për shembull 'context git' do t'ju lejonte të shtypnit 'commit' në vend se 'git commit'.
+contextManual=Caktoni një parashtesë parazgjedhje për urdhra të ardhshëm. Për shembull 'context git' do t’ju lejonte të shtypnit 'commit', në vend se 'git commit'.
 contextPrefixDesc=Parashtesa e urdhrit
 
 # LOCALIZATION NOTE: This message message displayed during the processing of
@@ -228,7 +228,7 @@ contextEmptyReply=Parashtesa e urdhrit nuk është caktuar
 # allows to identify a specific server when connected to multiple remote
 # servers.
 connectDesc=Urdhra ndërmjetësi për shërbyesin
-connectManual=Lidhuni te shërbyesi, duke krijuar në të versione vendore të urdhrave. Urdhrat për në largësi fillimisht kanë një parashtesë për t'i dalluar nga urdhrat vendore (por shihni urdhrin context për ta kapërcyer këtë)
+connectManual=Lidhuni te shërbyesi, duke krijuar në të versione vendore të urdhrave. Urdhrat për në largësi fillimisht kanë një parashtesë për t’i dalluar nga urdhrat vendore (por shihni urdhrin context për ta kapërcyer këtë)
 connectPrefixDesc=Parashtesë prind për urdhra të importuara
 connectUrlDesc=URL-ja ku të lidhet
 connectMethodDesc=Metoda e lidhjes
