--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -250,7 +250,7 @@ retry_call_button=Riprovoni
 email_link_button=Dërgoje Lidhjen Me Email
 cancel_button=Anuloje
 
-cannot_start_call_session_not_ready=Nuk niset dot thirrja, sesioni s'është gati.
+cannot_start_call_session_not_ready=Nuk niset dot thirrja, sesioni s’është gati.
 network_disconnected=Lidhja me rrjetin përfundoi papritmas.
 connection_error_see_console_notification=Thirrja dështoi; për hollësi, shihni konsolën.
 
@@ -270,14 +270,14 @@ powered_by_beforeLogo=Realizuar nga
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Si rrodhi bashkëbisedimi juaj?
-feedback_what_makes_you_sad=Ç'ju trishton?
+feedback_what_makes_you_sad=Ç’ju trishton?
 feedback_thank_you_heading=Faleminderit për përshtypjet!
 feedback_category_audio_quality=Cilësia e zërit
 feedback_category_video_quality=Cilësia e videos
 feedback_category_was_disconnected=U shkëput
 feedback_category_confusing=Me yçkla
 feedback_category_other=Tjetër:
-feedback_custom_category_text_placeholder=Ç'nuk shkoi mirë?
+feedback_custom_category_text_placeholder=Ç’nuk shkoi mirë?
 feedback_submit_button=Parashtrojeni
 feedback_back_button=Mbrapsht
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
