--- a/sq/browser/chrome/overrides/appstrings.properties
+++ b/sq/browser/chrome/overrides/appstrings.properties
@@ -6,10 +6,10 @@ malformedURI=URL-ja nuk është e vlefshme, ndaj nuk ngarkohet dot.
 fileNotFound=Firefox-i nuk gjen dot kartelën te %S.
 dnsNotFound=Firefox-i nuk gjen dot shërbyesin te %S.
 unknownProtocolFound=Firefox-i nuk di si ta hapë këtë adresë, ngaqë një nga protokollet vijuese (%S) nuk i përshoqërohet ndonjë programi ose nuk është i lejueshëm në këtë kontekst.
-connectionFailure=Firefox-i s'vendos dot lidhje me shërbyesin te %S.
+connectionFailure=Firefox-i s’vendos dot lidhje me shërbyesin te %S.
 netInterrupt=Lidhja me %S është përfunduar, ndërkohë që faqja ngarkohej.
 netTimeout=Shërbyesi te %S po e zgjat si shumë për përgjigje.
-redirectLoop=Firefox-i ka zbuluar që shërbyesi po e ridrejton kërkesën për këtë adresë në një rrugë së cilës nuk do t'i gjehet fundi kurrë.
+redirectLoop=Firefox-i ka zbuluar që shërbyesi po e ridrejton kërkesën për këtë adresë në një rrugë së cilës nuk do t’i gjehet fundi kurrë.
 unknownSocketType=Firefox-i nuk di se si të ndërlidhet me shërbyesin.
 netReset=Ndërkohë që ngarkohej faqja, lidhja me shërbyesin u rivendos.
 notCached=Ky dokument nuk është më i passhëm.
@@ -25,8 +25,8 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nisni zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t'i bërë ata të japin të dhëna vetjake ose financiare.
-unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit web për t'u bërë të ditur këtë problem.
+phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
+unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit web për t’u bërë të ditur këtë problem.
 contentEncodingError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë përdor një format të pavlefshëm ose një formë ngjeshjeje të pambuluar ende.
 resendButton.label=Ridërgoji
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don't translate "%S"
