--- a/sq/browser/installer/custom.properties
+++ b/sq/browser/installer/custom.properties
@@ -39,7 +39,7 @@ OPTION_STANDARD_RADIO=&Standard
 OPTION_CUSTOM_DESC=Mund të zgjidhni mundësi vetjake për instalimin. E këshilluar për përdorues të sprovuar.
 OPTION_CUSTOM_RADIO=&Vetjak
 WARN_RESTART_REQUIRED_UPGRADE=Që të plotësohet një përmirësim i mëparshëm i $BrandShortName-it, kompjuteri juaj duhet rinisur. Doni të riniset tani?
-WARN_MIN_SUPPORTED_OS_MSG=Na ndjeni, $BrandShortName-i s'mund të instalohet dot. Ky version i $BrandShortName-it lyp ${MinSupportedVer} ose më të ri.
+WARN_MIN_SUPPORTED_OS_MSG=Na ndjeni, $BrandShortName-i s’mund të instalohet dot. Ky version i $BrandShortName-it lyp ${MinSupportedVer} ose më të ri.
 WARN_RESTART_REQUIRED_UNINSTALL=Që të plotësohet një çinstalim i mëparshëm i $BrandShortName-it, kompjuteri juaj duhet rinisur. Doni të riniset tani?
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Që të ecet më tej me çinstalimin, $BrandShortName-i duhet mbyllur.\n\nJu lutemi, mbylleni $BrandShortName-in që të vazhdohet.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName-i është duke xhiruar.\n\nJu lutemi, përpara se të nisni versionin që sapo instaluat, mbylleni$BrandShortName-in.
@@ -51,7 +51,7 @@ UN_CONFIRM_CLICK=Që të vazhdohet, klikoni mbi Çinstaloje.
 BANNER_CHECK_EXISTING=Po kontrollohet instalimi ekzistues…
 COMPONENTS_PAGE_TITLE=Rregulloni Përbërëse Opsionale
 COMPONENTS_PAGE_SUBTITLE=Përbërëse Opsionale të Këshilluara
-OPTIONAL_COMPONENTS_DESC=Shërbimi i Mirëmbajtjes do t'ju lejojë të përditësoni $BrandShortName-in pa zhurmë dhe në prapaskenë.
+OPTIONAL_COMPONENTS_DESC=Shërbimi i Mirëmbajtjes do t’ju lejojë të përditësoni $BrandShortName-in pa zhurmë dhe në prapaskenë.
 MAINTENANCE_SERVICE_CHECKBOX_DESC=Instaloje Shërbimin e &Mirëmbajtjes
 
 SUMMARY_PAGE_TITLE=Përmbledhje
