--- a/sq/browser/installer/override.properties
+++ b/sq/browser/installer/override.properties
@@ -47,13 +47,13 @@ UninstallingText=$BrandFullNameDA-i do të çinstalohet prej dosjes vijuese. $_C
 UninstallingSubText=Po çinstalohet prej:
 FileError=Gabim në hapje kartele për shkrim në të: \r\n\r\n$0\r\n\r\nQë të ndalet instalimim, klikoni mbi Ndërprite,\r\nmbi Riprovo, që të riprovohet, ose\r\nmbi Shpërfille që të anashkalohet kjo kartelë.
 FileError_NoIgnore=Gabim në hapje kartele për shkrim në të: \r\n\r\n$0\r\n\r\nQë të riprovohet, klikoni mbi Riprovo, ose\r\nmbi Anuloje që të ndalet instalimi.
-CantWrite="S'shkroi dot: "
+CantWrite="S’shkroi dot: "
 CopyFailed=Kopjimi dështoi
 CopyTo="Kopjoje te "
 Registering="Po regjistrohet: "
 Unregistering="Po çregjistrohet: "
-SymbolNotFound="S'gjeti dot simbol: "
-CouldNotLoad="S'e ngarkoi dot: "
+SymbolNotFound="S’gjeti dot simbol: "
+CouldNotLoad="S’e ngarkoi dot: "
 CreateFolder="Krijoni dosje: "
 CreateShortcut="Krijoni shkurtore: "
 CreatedUninstaller="Çinstaluesi u krijua: "
