--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -143,7 +143,7 @@ PEPseudoSelEndOrUserActionPC=Pritej fund përzgjedhësi ose pseudo-klasë veprim
 PEPseudoSelNoUserActionPC=Pritej fund përzgjedhësi pas pseudo-elementi që nuk mbulon pseudo-klasa veprimi përdoruesi, por u gjet '%1$S'.
 PESelectorGroupExtraCombinator=Kombinator bllokues.
 PECounterStyleNotIdent=Pritej identifikues për emrin e rregullit @counter-style.
-PECounterStyleBadName=Emri i rregullit @counter-style s'mund të jetë '%1$S'.
+PECounterStyleBadName=Emri i rregullit @counter-style s’mund të jetë '%1$S'.
 PECounterStyleBadBlockStart=Pritej '{' në fillim të rregullit @counter-style, por u gjet '%1$S'.
 PECounterStyleEOF=Mbyllje '}' e bllokut @counter-style
 PECounterDescExpected=Pritej përshkrues numëruesi, por u gjet '%1$S'.
