--- a/sq/editor/ui/chrome/composer/editor.properties
+++ b/sq/editor/ui/chrome/composer/editor.properties
@@ -32,8 +32,8 @@ PublishPage=Boto Faqen
 DontPublish=Mos e Boto
 SavePassword=Përdor Përgjegjës Fjalëkalimesh për të ruajtur këtë fjalëkalim
 CorrectSpelling=(shkruar saktë)
-NoSuggestedWords=(s'ka fjalë të këshillueshme)
-NoMisspelledWord=S'ka fjalë të shkruara gabim
+NoSuggestedWords=(s’ka fjalë të këshillueshme)
+NoMisspelledWord=S’ka fjalë të shkruara gabim
 CheckSpellingDone=Kontrolli i drejtshkrimit u plotësua.
 CheckSpelling=Kontrollo Drejtshkrimin
 InputError=Gabim
@@ -211,5 +211,5 @@ NoAltText=Nëse pamja është e rëndësishme për lëndën e dokumentit, duhet 
 #
 #
 Malformed=Burimi nuk u shndërrua dot në dokument, ngaqë nuk është XHTML e vlefshme.
-NoLinksToCheck=Nuk ka elementë me lidhje për t'u kontrolluar
+NoLinksToCheck=Nuk ka elementë me lidhje për t’u kontrolluar
 FieldSet=Fusha u Caktua
