--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -12,7 +12,7 @@ alertAddonsFail=Instalimi dështoi
 
 alertDownloadsStart2=Shkarkimi po fillon
 alertDownloadsDone2=Shkarkim i plotësuar
-alertCantOpenDownload=S'hap dot kartelën. Prekeni që të ruhet.
+alertCantOpenDownload=S’hap dot kartelën. Prekeni që të ruhet.
 alertDownloadsSize=Shkarkim shumë i madh
 alertDownloadsNoSpace=Hapësirë depozitimi e pamjaftueshme
 alertDownloadsToast=Filloi shkarkimi…
@@ -26,7 +26,7 @@ alertFullScreenToast=Shtypni tastin BACK që të dilni nga mënyrë ekran-i-plot
 # %S will be replaced by the name of the search engine (exposed by the current page)
 # that has been added; for example, 'Google'.
 alertSearchEngineAddedToast='%S' u shtua si motor kërkimesh
-alertSearchEngineErrorToast=S'u shtua dot '%S' si motor kërkimesh
+alertSearchEngineErrorToast=S’u shtua dot '%S' si motor kërkimesh
 alertSearchEngineDuplicateToast='%S' është tashmë një nga motorët tuaj të kërkimeve
 
 downloadCancelPromptTitle=Anulojeni Shkarkimin
@@ -70,7 +70,7 @@ safeBrowsingDoorhanger=Ky sajt është identifikuar se përmban malware ose për
 blockPopups.label=Bllokoji Flluskat
 
 # XPInstall
-xpinstallPromptWarning2=%S e pengoi këtë sajt (%S) t'ju kërkojë të instalojë "software" në pajisjen tuaj.
+xpinstallPromptWarning2=%S e pengoi këtë sajt (%S) t’ju kërkojë të instalojë "software" në pajisjen tuaj.
 xpinstallPromptAllowButton=Lejoje
 xpinstallDisabledMessageLocked=Instalimi i software-it është çaktivizuar nga përgjegjësi i sistemit tuaj.
 xpinstallDisabledMessage2=Instalimi i software-it është hëpërhë i çaktivizuar. Klikoni mbi Aktivizoje dhe riprovoni.
