--- a/sq/netwerk/necko.properties
+++ b/sq/netwerk/necko.properties
@@ -33,8 +33,8 @@ DirColSize=Madhësi
 DirColMTime=Ndryshuar së Fundmi
 DirFileLabel=Kartelë: 
 
-PhishingAuth=Ju ndan një hap nga vizita e "%1$S". Ky sajt mund të jetë duke u përpjekur t'jua hedhë duke ju bërë të mendoni se jeni duke vizituar një tjetër sajt. Bëni kujdes të tejskajshëm.
+PhishingAuth=Ju ndan një hap nga vizita e "%1$S". Ky sajt mund të jetë duke u përpjekur t’jua hedhë duke ju bërë të mendoni se jeni duke vizituar një tjetër sajt. Bëni kujdes të tejskajshëm.
 PhishingAuthAccept=E kuptova dhe do të jem shumë i kujdesshëm
-SuperfluousAuth=Ju ndan një hap nga futja te sajti "%1$S" me emër përdoruesi "%2$S", por sajti web nuk lyp mirëfilltësim. Kjo mund të jetë një përpjekje për t'jua hedhur.\n\nA është "%1$S" sajti që doni të vizitoni?
+SuperfluousAuth=Ju ndan një hap nga futja te sajti "%1$S" me emër përdoruesi "%2$S", por sajti web nuk lyp mirëfilltësim. Kjo mund të jetë një përpjekje për t’jua hedhur.\n\nA është "%1$S" sajti që doni të vizitoni?
 AutomaticAuth=Ju ndan një hap nga futja te sajti "%1$S" me emër përdoruesi "%2$S".
 
