--- a/sq/security/manager/chrome/pipnss/pipnss.properties
+++ b/sq/security/manager/chrome/pipnss/pipnss.properties
@@ -281,8 +281,8 @@ UnknownCertIssuer=(Lëshues i Panjohur)
 UnknownCertOrg=(Organizëm i Panjohur)
 AVATemplate=%S = %S
 
-PSMERR_SSL_Disabled=S'lidhet dot në mënyrë të sigurt, sepse protokolli SSL është çaktivizuar.
-PSMERR_SSL2_Disabled=S'lidhet dot në mënyrë të sigurt, sepse sajti përdor një version të vjetër, të pasigurt të protokollit SSL.
+PSMERR_SSL_Disabled=S’lidhet dot në mënyrë të sigurt, sepse protokolli SSL është çaktivizuar.
+PSMERR_SSL2_Disabled=S’lidhet dot në mënyrë të sigurt, sepse sajti përdor një version të vjetër, të pasigurt të protokollit SSL.
 PSMERR_HostReusedIssuerSerial=Keni marrë një dëshmi të pavlefshme.  Ju lutemi, lidhuni me administratorin e shërbyesit ose i dërgoni një email korrespondentit dhe jepuni atyre të dhënat vijuese:\n\nDëshmia juaj përmban të njëjtin numër serial me një tjetër dëshmi të lëshuar nga autoriteti i dëshmive.  Ju lutemi, merrni një dëshmi të re që të përmbajë një numër serial unik.
 
 SSLConnectionErrorPrefix=Ndodhi një gabim gjatë lidhjes me %S.
