--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -31,10 +31,10 @@ devinfo_desc=Përshkrim
 pageInfo_SiteNotVerified=Sajt Web Jo i Verifikuar
 pw_erased_ok=Kujdes! Keni fshirë Fjalëkalimin tuaj të Përgjithshëm.
 failed_pw_change=Nuk arrin të ndryshojë Fjalëkalimin e Përgjithshëm.
-certNotVerified_Unknown=Për arsye të panjohura, s'verifikoi dot këtë dëshmi.
-certNotVerified_IssuerUnknown=S'verifikoi dot këtë dëshmi, sepse lëshuesi është i panjohur. 
+certNotVerified_Unknown=Për arsye të panjohura, s’verifikoi dot këtë dëshmi.
+certNotVerified_IssuerUnknown=S’verifikoi dot këtë dëshmi, sepse lëshuesi është i panjohur. 
 devinfo_stat_disabled=çaktivizuar
-certNotVerified_CertNotTrusted=S'verifikoi dot këtë dëshmi, sepse nuk është besuar.
+certNotVerified_CertNotTrusted=S’verifikoi dot këtë dëshmi, sepse nuk është besuar.
 chooseP12BackupFileDialog=Emër Kartele për Kopjeruajtje
 pageInfo_NoEncryption=Lidhje Jo e Shifruar.
 pw_not_wanted=Kujdes! Keni vendosur të mos përdorni Fjalëkalim të Përgjithshëm.
@@ -46,7 +46,7 @@ enable_fips=Aktivizo FIPS
 pageInfo_ViewCertificate=Shihni dëshminë e sigurisë që vërteton identitetin e këtij sajti web.
 pw_empty_warning=Fjalëkalimet tuaj të ruajtur për email dhe web, të dhëna formularësh, dhe kyçe privatë nuk do të jenë të mbrojtur.
 pw_change_ok=Fjalëkalim i Përgjithshëm i ndryshuar me sukses.
-certNotVerified_IssuerNotTrusted=S'verifikoi dot këtë dëshmi, sepse nuk është besuar lëshuesi. 
+certNotVerified_IssuerNotTrusted=S’verifikoi dot këtë dëshmi, sepse nuk është besuar lëshuesi. 
 unnamedCA=Autoritet Dëshmish (pa emër)
 pageInfo_WebSiteVerified=Identitet Sajti Web i Verifikuar
 devinfo_modname=Modul
@@ -60,16 +60,16 @@ devinfo_stat_loggedin=I futur
 pageInfo_Privacy_None3=Faqja që po shihni nuk është e shifruar.
 pageInfo_Privacy_None2=Të dhëna të dërguara përmes Internetit të pashifruara mund të shihen nga persona të tjerë gjatë kohës së transitit.
 disable_fips=Çaktivizo FIPS
-certNotVerified_CertRevoked=S'verifikoi dot këtë dëshmi, sepse është shfuqizuar.
+certNotVerified_CertRevoked=S’verifikoi dot këtë dëshmi, sepse është shfuqizuar.
 CertPassPrompt=Ju lutemi, jepni Fjalëkalimin Vetjak të Sigurisë për Kyçet Private PSM të pajisjeve të sigurisë.
 pageInfo_Privacy_None1=Sajti web %S nuk mbulon shifrim për faqen që po shihni.
 deleteUserCertTitle=Fshini Dëshmitë tuaja
 editTrustEmail=Dëshmia "%S" është lëshuar nga:
-certNotVerified_CertExpired=S'verifikoi dot këtë dëshmi, sepse ka skaduar.
+certNotVerified_CertExpired=S’verifikoi dot këtë dëshmi, sepse ka skaduar.
 password_not_set=(i pacaktuar)
 clientAuthMessage2=Lëshuar Nën: "%S"
 clientAuthMessage1=Organizëm: "%S"
-certNotVerified_CAInvalid=S'verifikoi dot këtë dëshmi, sepse dëshmia e AD-ve është e pavlefshme.  
+certNotVerified_CAInvalid=S’verifikoi dot këtë dëshmi, sepse dëshmia e AD-ve është e pavlefshme.  
 deleteUserCertConfirm=Jeni i sigurt se doni të fshini këto dëshmi?
 devinfo_stat_notpresent=Jo i Pranishëm
 
@@ -77,12 +77,12 @@ devinfo_stat_notpresent=Jo i Pranishëm
 # %2$S is the key size of the cipher.
 pageInfo_StrongEncryptionWithBits=Lidhje e Shifruar: Shifrim i Nivelit të Lartë (%1$S, kyçe %2$S bitësh)
 
-importEmailCertPrompt=Përzgjidhni Kartelë që përmban dëshmi Email-i të dikujt për t'u importuar
+importEmailCertPrompt=Përzgjidhni Kartelë që përmban dëshmi Email-i të dikujt për t’u importuar
 certVerified=Kjo dëshmi është verifikuar për përdorimet vijuese:
 devinfo_serialnum=Numër Serie
 devinfo_stat_notloggedin=Jo i Futur
 login_failed=Dështoi në Hyrje
-loadPK11TokenDialog=Zgjidhni një pajisje PKCS#11 për t'u ngarkuar
+loadPK11TokenDialog=Zgjidhni një pajisje PKCS#11 për t’u ngarkuar
 devinfo_hwversion=Version HW
 issuerCertNotFound=Nuk u gjet dëshmi për këtë autoritet dëshmish
 devinfo_fwversion=Version FW
@@ -101,7 +101,7 @@ pageInfo_Privacy_Mixed1=Pjesë të faqes që po shihni nuk qenë shifruar, para 
 
 
 writeFileFailure=Gabim Kartele
-writeFileFailed=S'shkruan dot te kartela %S:\n%S.
+writeFileFailed=S’shkruan dot te kartela %S:\n%S.
 writeFileAccessDenied=Hyrje e mohuar
 writeFileIsLocked=Kartela është e kyçur
 writeFileNoDeviceSpace=Nuk ka më vend në pajisje
@@ -111,11 +111,11 @@ deleteSslCertImpact3=Nëse fshini një përjashtim shërbyesi, riktheni kështu 
 deleteSslCertConfirm3=Jeni i sigurt që doni të fshihen këto përjashtime shërbyesi?
 deleteOrphanCertTitle=Fshini Dëshmitë
 deleteOrphanCertConfirm=Jeni i sigurt që doni të fshihen këto dëshmi?
-deleteEmailCertImpactDesc=Nëse fshini dëshminë e e-mail-it të dikujt, nuk do të jeni më në gjendje t'i dërgoni atij personi e-mail të shifruar.
+deleteEmailCertImpactDesc=Nëse fshini dëshminë e e-mail-it të dikujt, nuk do të jeni më në gjendje t’i dërgoni atij personi e-mail të shifruar.
 addExceptionValidShort=Dëshmi e Vlefshme
 addExceptionValidLong=Ky sajt furnizon identifikim të vlefshëm, të vërtetuar.  Nuk ka nevojë të shtohet përjashtim.
 addExceptionUnverifiedOrBadSignatureShort=Identitet i Panjohur
-addExceptionUnverifiedOrBadSignatureLong=Dëshmia nuk u besua, ngaqë s'është vërtetuar nga një autoritet i mirëpranuar që përdor nënshkrim të sigurt.
+addExceptionUnverifiedOrBadSignatureLong=Dëshmia nuk u besua, ngaqë s’është vërtetuar nga një autoritet i mirëpranuar që përdor nënshkrim të sigurt.
 addExceptionNoCertShort=Pa të Dhëna të Passhme
 addExceptionNoCertLong=Nuk arrihet të merret gjendje identifikimi për sajtin e dhënë.
 addExceptionInvalidHeader=Ky sajt po përpiqet të identifikojë veten përmes të dhënash të pavlefshme.
@@ -129,7 +129,7 @@ addExceptionCheckingShort=Po Kontrollohen Të Dhënat
 addExceptionCheckingLong=Përpjekje për identifikimin e sajtit…
 addExceptionConnectionFailed=Dështoi Lidhje
 
-importServerCertPrompt=Përzgjidhni Kartelën që përmban dëshmi Shërbyesi për t'u importuar
+importServerCertPrompt=Përzgjidhni Kartelën që përmban dëshmi Shërbyesi për t’u importuar
 
 # Cert export
 SaveCertAs=Ruaje Dëshminë Në Kartelë
