--- a/sq/toolkit/chrome/global/devtools/csscoverage.properties
+++ b/sq/toolkit/chrome/global/devtools/csscoverage.properties
@@ -15,7 +15,7 @@ csscoverageOneShotDesc2=Grumbullo të dhëna të atypëratyshme mbulimi CSS-je
 csscoverageToggleDesc2=Fillo/Ndale grumbullimin e të dhënave për mbulim CSS-je
 csscoverageReportDesc2=Shfaqe raportin e mbulimit CSS
 csscoverageStartNoReloadDesc=Mos fillo me ringarkim faqeje
-csscoverageStartNoReloadManual=Më e mira është t'ia fillojmë me ringarkimin e faqes së tanishme, ngaqë kështu prova fillohet nga një pikë e njohur, por mund të ketë arsye pse të mos duam ta bëjmë kështu (p.sh. faqja përmban gjendje që do të humbë gjatë ringarkimit)
+csscoverageStartNoReloadManual=Më e mira është t’ia fillojmë me ringarkimin e faqes së tanishme, ngaqë kështu prova fillohet nga një pikë e njohur, por mund të ketë arsye pse të mos duam ta bëjmë kështu (p.sh. faqja përmban gjendje që do të humbë gjatë ringarkimit)
 
 # LOCALIZATION NOTE (csscoverageRunningReply, csscoverageDoneReply): Text that
 # describes the current state of the css coverage system
