--- a/sq/toolkit/chrome/global/filepicker.properties
+++ b/sq/toolkit/chrome/global/filepicker.properties
@@ -6,20 +6,20 @@ errorCreateNewDirMessage=Nuk u krijua dot drejtoria %S
 openWithoutPermissionMessage_file=Kartela %S nuk është e lexueshme
 appsTitle=Zbatime
 noButtonLabel=Jo
-errorCreateNewDirIsFileMessage=S'mund të krijohej drejtoria, %S është kartelë
+errorCreateNewDirIsFileMessage=S’mund të krijohej drejtoria, %S është kartelë
 errorOpeningFileTitle=Gabim gjatë hapjes së %S
 confirmTitle=Ripohoni
 confirmFileReplacing=Ka një %S.\nDoni të zëvendësohet?
 dirTextInputLabel=Emër drejtorie:
 saveButtonLabel=Ruaje
 errorNewDirDoesExistTitle=Gabim gjatë krijimit të %S
-saveWithoutPermissionMessage_dir=S'mund të krijojë kartelë. Drejtoria %S nuk është e shkruajtshme. 
+saveWithoutPermissionMessage_dir=S’mund të krijojë kartelë. Drejtoria %S nuk është e shkruajtshme. 
 errorDirDoesntExistMessage=Nuk ka drejtori %S 
 errorSavingFileTitle=Gabim gjatë ruajtjes %S
 imageTitle=Kartela Figure
 errorNewDirDoesExistMessage=Ka tashmë një kartelë të quajtur %S, drejtoria nuk mund të krijohet.
 errorOpenFileDoesntExistMessage=Nuk ka kartelë %S 
-saveParentDoesntExistMessage=Nuk ka shteg %S, s'ruan dot %S
+saveParentDoesntExistMessage=Nuk ka shteg %S, s’ruan dot %S
 errorCreateNewDirPermissionMessage=Drejtoria nuk mund të krijohet, %S nuk është e shkruajtshme
 saveWithoutPermissionMessage_file=Kartela %S nuk është e shkruajtshme.
 errorCreateNewDirTitle=Gabim gjatë krijimit të %S
@@ -34,7 +34,7 @@ selectFolderButtonLabel=Përzgjidhni
 openButtonLabel=Hape
 promptNewDirMessage=Emër drejtorie:
 errorPathProblemTitle=Gabim i Panjohur
-saveParentIsFileMessage=%S është kartelë, s'ruan dot %S
+saveParentIsFileMessage=%S është kartelë, s’ruan dot %S
 errorPathProblemMessage=Ndodhi një gabim i panjohur (shtegu %S)
 allTitle=Tërë Kartelat
 formatLabel=Format:
