--- a/sq/toolkit/chrome/global/viewSource.properties
+++ b/sq/toolkit/chrome/global/viewSource.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 outOfRangeText=Nuk u gjet rreshti i treguar.
-outOfRangeTitle=Rresht që s'gjendet
+outOfRangeTitle=Rresht që s’gjendet
 invalidInputTitle=Futje e pavlefshme
 statusBarLineCol=Rreshti %1$S, Shtylla %2$S
 goToLineTitle=Shkoni te rreshti
