--- a/sq/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/sq/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -7,8 +7,8 @@
 displayNameDesktop=Desktop
 quitCancelDownloadsAlertMsgMac=Nëse dilni tani, do të anulohet 1 shkarkim. Jeni i sigurt se doni të dilet?
 cancelDownloadsOKTextMultiple=Anulo %S Shkarkime
-fileDoesNotExistOpenTitle=S'hap dot %S
-notStarted=S'ka Filluar
+fileDoesNotExistOpenTitle=S’hap dot %S
+notStarted=S’ka Filluar
 chooseAppFilePickerTitle=Hapeni Me…
 quitCancelDownloadsAlertMsgMacMultiple=Nëse dilni tani, do të anulohen %S shkarkime. Jeni i sigurt se doni të dilet?
 fileDoesNotExistError=%S nuk ekziston. Mund të jetë riemërtuar, zhvendosur, ose fshirë pasi qe shkarkuar.
@@ -35,7 +35,7 @@ fileExecutableSecurityWarning="%S" është një kartelë e ekzekutueshme. Kartel
 dontQuitButtonMac=Mos Dil
 quitCancelDownloadsAlertMsg=Nëse dilni tani, do të anulohet 1 shkarkim. Jeni i sigurt se doni të dilet?
 dontQuitButtonWin=Mos Dil
-fileDoesNotExistShowTitle=S'shfaq dot %S
+fileDoesNotExistShowTitle=S’shfaq dot %S
 quitCancelDownloadsAlertMsgMultiple=Nëse dilni tani, do të anulohen %S shkarkime. Jeni i sigurt se doni të dilet?
 downloading=Po shkarkohet
 yesterday=Dje
