--- a/sq/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/sq/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -7,8 +7,8 @@
 defaultApp=%S (parazgjedhje)
 title=Po hapet %S
 selectDownloadDir=Përzgjidhni Dosje Shkarkimesh
-badApp=Zbatimi që zgjodhët ("%S") s'u gjet dot.  Kontrolloni emër kartele ose zgjidhni një tjetër zbatim.
-saveDialogTitle=Jepni emër kartele për t'u ruajtur te…
+badApp=Zbatimi që zgjodhët ("%S") s’u gjet dot.  Kontrolloni emër kartele ose zgjidhni një tjetër zbatim.
+saveDialogTitle=Jepni emër kartele për t’u ruajtur te…
 badApp.title=Nuk u gjet zbatim
 chooseAppFilePickerTitle=Zgjidhni Zbatim Ndihmës
 unknownAccept.label=Ruaje Kartelën
