--- a/sq/toolkit/chrome/mozapps/update/updates.properties
+++ b/sq/toolkit/chrome/mozapps/update/updates.properties
@@ -88,8 +88,8 @@ downloadPausedStatus=I ndalur —  %S
 # %2$S is the update version - provided by the update xml. Ex: version 10.0.5
 # %3$S is the build identifier - provided by the update xml. Ex: 20081022033543
 updateNightlyName= e përnatshme %1$S %2$S %3$S
-incompatAddons_major=Disa prej shtesave tuaja nuk do të punojnë me %1$S %2$S, dhe do të çaktivizohen. Sapo të jenë bërë të përputhshme, %1$S do t'i përditësojë dhe riaktivizojë këto shtesa:
-incompatAddons_minor=Disa prej shtesave tuaja nuk do të punojnë me këtë përditësim, dhe do të çaktivizohen. Sapo të jenë bërë të përputhshme, %1$S do t'i përditësojë dhe riaktivizojë këto shtesa: 
+incompatAddons_major=Disa prej shtesave tuaja nuk do të punojnë me %1$S %2$S, dhe do të çaktivizohen. Sapo të jenë bërë të përputhshme, %1$S do t’i përditësojë dhe riaktivizojë këto shtesa:
+incompatAddons_minor=Disa prej shtesave tuaja nuk do të punojnë me këtë përditësim, dhe do të çaktivizohen. Sapo të jenë bërë të përputhshme, %1$S do t’i përditësojë dhe riaktivizojë këto shtesa: 
 intro_major=Doni ta përmirësoni tani me %1$S %2$S?
 intro_minor=Ka gati një përditësim sigurie dhe qëndrueshmërie për %1$S:
 
