--- a/sq/webapprt/webapprt/overrides/appstrings.properties
+++ b/sq/webapprt/webapprt/overrides/appstrings.properties
@@ -6,10 +6,10 @@ malformedURI=URL-ja nuk është e vlefshme dhe ndaj nuk ngarkohet dot.
 fileNotFound=Nuk u gjet dot kartela %S. Ju lutemi, kontrolloni vendin dhe riprovoni.
 dnsNotFound=%S nuk u gjet dot. Ju lutemi, kontrollojini emrin dhe riprovoni.
 unknownProtocolFound=Një nga %S vijues nuk është protokol i regjistruar ose nuk është i lejueshëm në këtë kontekst.
-connectionFailure=Gjatë përpjekjes për t'u lidhur me %S lidhja nuk u pranua.
+connectionFailure=Gjatë përpjekjes për t’u lidhur me %S lidhja nuk u pranua.
 netInterrupt=Lidhja me %S u përfunduar papritmas. Mund të jenë shpërngulur vetëm ca të dhëna.
-netTimeout=Gjatë përpjekjes për t'u lidhur me %S, veprimit i mbaroi koha.
-redirectLoop=Njëshërbyes po e ridrejton kërkesën në një rrugë së cilës nuk do t'i gjehet fundi kurrë.
+netTimeout=Gjatë përpjekjes për t’u lidhur me %S, veprimit i mbaroi koha.
+redirectLoop=Njëshërbyes po e ridrejton kërkesën në një rrugë së cilës nuk do t’i gjehet fundi kurrë.
 confirmRepostPrompt=Që të vazhdohet, zbatimi duhet të dërgojë të dhëna që do të shkaktojnë përsëritjen e cilitdo veprim (fjala vjen kërkim apo ripohim porosie) që po kryhej më parë.
 resendButton.label=Ridërgoje
 unknownSocketType=Zbatimi nuk di se si të komunikojë me shërbyesin.
@@ -21,7 +21,7 @@ deniedPortAccess=Zbatimi provoi të përdorë një portë rrjeti te e cila nuk d
 proxyResolveFailure=Zbatimi është formësuar të përdorë një shërbyes ndërmjetës që nuk gjendet dot.
 proxyConnectFailure=Zbatimi është formësuar të përdorë një shërbyes ndërmjetës i cili nuk po pranon lidhje.
 contentEncodingError=Zbatimi mori nga një shërbyes një përgjigje që përdorte format të pavlefshëm ose të pambuluar ngjeshjeje.
-unsafeContentType=Zbatimi nuk mund të vazhdojë, ngaqë përdori një lloj kartele që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e zbatimit për t'u bërë të ditur këtë problem.
+unsafeContentType=Zbatimi nuk mund të vazhdojë, ngaqë përdori një lloj kartele që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e zbatimit për t’u bërë të ditur këtë problem.
 externalProtocolTitle=Kërkesë Protokolli të Jashtëm
 externalProtocolPrompt=Që të trajtohet %1$S, duhet nisur një zbatim i jashtëm: lidhje.\n\n\nLidhje e kërkuar:\n\n%2$S\n\nZbatim: %3$S\n\n\nNëse nuk e prisnit këtë kërkesë, mund të jetë përpjekje për shfrytëzim të një dobësie te ai programi tjetër. Anulojeni këtë kërkesë, veç nëse jeni të sigurt se nuk është dashakeqe.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
@@ -29,7 +29,7 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mbaje mend zgjedhjen time për krejt lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nise zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar, bazuar te parapëlqimet tuaja mbi sigurinë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t'i bërë ata të japin të dhëna vetjake ose financiare.
+phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
 cspFrameAncestorBlocked=Ky zbatim u përpoq të hynte në një burim i cili përmban një rregull sigurie lënde që e pengon trupëzimin e saj në këtë mënyrë.
 corruptedContentError=Zbatimi nuk vazhdon dot ngarkimin, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Ky zbatim u përpoq të përdorë një teknologji të pambuluar që nuk është më e passhme.
