--- a/sq/webapprt/webapprt/webapp.properties
+++ b/sq/webapprt/webapprt/webapp.properties
@@ -19,7 +19,7 @@ hideApplicationCmdMac.label=Fshihe %S
 # LOCALIZATION NOTE (geolocation.title): %S will be replaced with the name of
 # the webapp.
 geolocation.title=%S - Tregim Vendi
-geolocation.description=Doni t'u tregohet vendi juaj?
+geolocation.description=Doni t’u tregohet vendi juaj?
 geolocation.allow=Tregoje Vendin
 geolocation.deny=Mos Ua Trego
 geolocation.remember=Mbaje mend zgjedhjen time
