--- a/sq/browser/chrome/browser/devtools/webconsole.properties
+++ b/sq/browser/chrome/browser/devtools/webconsole.properties
@@ -229,7 +229,7 @@ maxCountersExceeded=U tejkalua numri maksimum i lejuar për numërues në këtë
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-selfxss.msg=Sinjalizim Rrengu: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t'u lejojë agresorit të vjedhë identitetin tuaj ose të marrë nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë (nuk ka nevojë për shtypjen e tastit Enter) që të lejoni ngjitjen.
+selfxss.msg=Sinjalizim Rrengu: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorit të vjedhë identitetin tuaj ose të marrë nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë (nuk ka nevojë për shtypjen e tastit Enter) që të lejoni ngjitjen.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
