--- a/sq/dom/chrome/dom/dom.properties
+++ b/sq/dom/chrome/dom/dom.properties
@@ -16,7 +16,7 @@ OnBeforeUnloadTitle=Jeni i sigurt?
 OnBeforeUnloadMessage=Kjo faqe po kërkon që të ripohoni se doni të ikni prej këtej - të dhënat që dhatë mund të mos ruhen.
 OnBeforeUnloadStayButton=Rri te Faqja
 OnBeforeUnloadLeaveButton=Braktise Faqen
-UnexpectedCanvasVariantStyle=canvas: përpjekja për t'i dhënë strokeStyle-it ose fillStyle-it një vlerë nuk qe as varg, as CanvasGradient, ose u shpërfill një CanvasPattern.
+UnexpectedCanvasVariantStyle=canvas: përpjekja për t’i dhënë strokeStyle-it ose fillStyle-it një vlerë nuk qe as varg, as CanvasGradient, ose u shpërfill një CanvasPattern.
 EmptyGetElementByIdParam=U dha varg i zbrazët te getElementById().
 LowMemoryTitle=Kujdes: Kujtesë e pakët
 LowMemoryMessage=Një programth te kjo faqe u ndal për shkak të gjendjes me kujtesë të pakët.
