--- a/sq/dom/chrome/nsWebBrowserPersist.properties
+++ b/sq/dom/chrome/nsWebBrowserPersist.properties
@@ -8,12 +8,12 @@ noMemory=Nuk ka kujtesë të mjaftueshme për të plotësuar veprimin që kërku
 accessError=%S nuk u ruajt dot, ngaqë nuk mund të ndryshoni lëndën e asaj dosje.\n\nNdryshoni vetitë e dosjes dhe riprovoni, ose provoni ruajtjen në një vend tjetër.
 SDAccessErrorCardReadOnly=Nuk shkarkohet dot kartela, ngaqë karta SD po përdoret.
 SDAccessErrorCardMissing=Nuk shkarkohet dot kartela, ngaqë mungon karta SD.
-helperAppNotFound=%S s'mund të hapej, ngaqë zbatimi ndihmës i përshoqëruar nuk ekziston. Ndryshoni përshoqërimin te parapëlqimet tuaj.
-launchError=%S s'mund të hapej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni fillimisht ruajtjen në disk e mandej hapjen e kartelës.
-writeError=%S s'mund të ruhej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni ruajtjen në një vend tjetër.
+helperAppNotFound=%S s’mund të hapej, ngaqë zbatimi ndihmës i përshoqëruar nuk ekziston. Ndryshoni përshoqërimin te parapëlqimet tuaj.
+launchError=%S s’mund të hapej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni fillimisht ruajtjen në disk e mandej hapjen e kartelës.
+writeError=%S s’mund të ruhej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni ruajtjen në një vend tjetër.
 title=Po shkarkohet %S
 readOnly=%S nuk u ruajt dot, sepse disku, dosja, apo kartela është e mbrojtur nga shkrimi.\n\nBëni të mundur shkrimin në disk dhe riprovoni, ose provoni ruajtjen në një vend tjetër.
 readError=%S nuk u ruajt dot, ngaqë nuk mund të lexohej kartela burim.\n\nRiprovoni më vonë, ose lidhuni me përgjegjësin e shërbyesit.
-diskFull=S'ka vend të mjaftë në disk për ruajtjen e %S.\n\nHiqni kartela të panevojshme prej diskut dhe riprovoni, ose provoni ruajtjen në një vend tjetër.
+diskFull=S’ka vend të mjaftë në disk për ruajtjen e %S.\n\nHiqni kartela të panevojshme prej diskut dhe riprovoni, ose provoni ruajtjen në një vend tjetër.
 fileAlreadyExistsError=%S nuk u ruajt dot, ngaqë ka tashmë një kartelë me të tillë emër si drejtoria '_files'.\n\nProvoni ta ruani në një vend tjetër.
 fileNameTooLongError=%S nuk u ruajt dot, ngaqë emri i kartelës është shumë i gjatë.\n\nProvoni ruajtjen me një emër më të shkurtër.
