--- a/sq/mobile/android/chrome/handling.properties
+++ b/sq/mobile/android/chrome/handling.properties
@@ -2,6 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-protocol.failed=S'u gjet dot ndonjë zbatim për ta hapur këtë lidhje
+protocol.failed=S’u gjet dot ndonjë zbatim për ta hapur këtë lidhje
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Kërkoni
