--- a/sq/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/sq/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -16,7 +16,7 @@ profileNameInvalidTitle=Emër i pavlefshëm profili
 deleteTitle=Fshini Profil
 profileFinishText=Klikoni mbi Përfundoje që të krijohet ky profil i ri.
 profileTooltip=Profil: '%S' - Shteg: '%S'
-profileCreationFailed=S'mund të krijohej profili. Mundet që dosja e zgjedhur nuk është e shkruajtshme.
+profileCreationFailed=S’mund të krijohej profili. Mundet që dosja e zgjedhur nuk është e shkruajtshme.
 deleteFiles=Fshi Kartela
 profileCreationFailedTitle=Krijimi i Profilit dështoi
 renameProfileTitle=Riemërtoni Profil
