--- a/sq/toolkit/crashreporter/crashreporter.ini
+++ b/sq/toolkit/crashreporter/crashreporter.ini
@@ -19,7 +19,7 @@ CrashReporterProductErrorText2=%s-i pati një problem dhe u vithis.\n\nPër fat 
 CrashReporterSorry=Na Ndjeni
 # LOCALIZATION NOTE (CrashReporterDescriptionText2): The %s is replaced with the product name.
 CrashReporterDescriptionText2=%s-i pati një problem dhe u vithis.\n\nPër të na ndihmuar në diagnostikimin dhe ndreqjen e problemit, mund të na dërgoni një njoftim vithisjeje.
-CrashReporterDefault=Ky zbatim po xhirohet pas një vithisje, për t'iu njoftuar problemin autorëve të zbatimit.  Nuk do të duhej të xhirohej drejtpërsëdrejti.
+CrashReporterDefault=Ky zbatim po xhirohet pas një vithisje, për t’iu njoftuar problemin autorëve të zbatimit.  Nuk do të duhej të xhirohej drejtpërsëdrejti.
 Details=Hollësi…
 ViewReportTitle=Lëndë Njoftimi
 CommentGrayText=Shtoni një koment.  Shënim: Komentet janë të dukshëm për publikun
@@ -45,13 +45,13 @@ CrashID=ID Vithisjeje: %s
 CrashDetailsURL=Mund të shihni hollësitë e kësaj vithisjeje te %s
 ErrorBadArguments=Zbatimi dha një argument të pavlefshëm.
 ErrorExtraFileExists=Zbatimi nuk la ndonjë kartelë të dhënash zbatimi.
-ErrorExtraFileRead=S'lexoi dot kartelën e të dhënave të zbatimit.
-ErrorExtraFileMove=S'lëvizi dot kartelën e të dhënave të zbatimit.
+ErrorExtraFileRead=S’lexoi dot kartelën e të dhënave të zbatimit.
+ErrorExtraFileMove=S’lëvizi dot kartelën e të dhënave të zbatimit.
 ErrorDumpFileExists=Zbatimi nuk la ndonjë kartelë zbrazjeje vithisjeje.
-ErrorDumpFileMove=S'lëvizi dot zbrazje vithisjeje.
+ErrorDumpFileMove=S’lëvizi dot zbrazje vithisjeje.
 ErrorNoProductName=Zbatimi nuk identifikoi veten.
 ErrorNoServerURL=Zbatimi nuk tregoi ndonjë shërbyes njoftimi vithisjesh.
-ErrorNoSettingsPath=S'gjeti dot rregullimet mbi njoftuesin e vithisjeve.
-ErrorCreateDumpDir=S'krijoi dot drejtori radhe zbrazjesh.
+ErrorNoSettingsPath=S’gjeti dot rregullimet mbi njoftuesin e vithisjeve.
+ErrorCreateDumpDir=S’krijoi dot drejtori radhe zbrazjesh.
 # LOCALIZATION NOTE (ErrorEndOfLife): The %s is replaced with the product name.
 ErrorEndOfLife=Versioni i %s-it që po përdorni nuk mbulohet më. Nuk pranohen më njoftime vithisjesh për këtë version. Ju lutemi, shihni mundësinë e kalimit te një version që mbulohet.
