--- a/sq/webapprt/webapprt/overrides/dom.properties
+++ b/sq/webapprt/webapprt/overrides/dom.properties
@@ -16,7 +16,7 @@ OnBeforeUnloadTitle=Jeni i sigurt?
 OnBeforeUnloadMessage=Ky zbatim po kërkon që të ripohoni se doni të ikni prej këtej - të dhënat që dhatë mund të mos ruhen.
 OnBeforeUnloadStayButton=Qëndro
 OnBeforeUnloadLeaveButton=Braktise
-UnexpectedCanvasVariantStyle=canvas: përpjekja për t'i dhënë strokeStyle-it ose fillStyle-it një vlerë nuk qe as varg, as CanvasGradient, ose u shpërfill një CanvasPattern.
+UnexpectedCanvasVariantStyle=canvas: përpjekja për t’i dhënë strokeStyle-it ose fillStyle-it një vlerë nuk qe as varg, as CanvasGradient, ose u shpërfill një CanvasPattern.
 EmptyGetElementByIdParam=U dha varg i zbrazët te getElementById().
 LowMemoryTitle=Kujdes: Kujtesë e pakët
 LowMemoryMessage=Një programth zbatimi u ndal për shkak të gjendjes me kujtesë të pakët.
