Beta, your sister just got nice apostrophes. You deserve them too

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -19,7 +19,7 @@ contextMenuSearch.accesskey=K
 
 bookmarkAllTabsDefault=[Emër Dosjeje]
 
-xpinstallPromptWarning=%S-i e pengoi këtë sajt (%S) t'ju kërkojë të instalojë "software" në kompjuterin tuaj.
+xpinstallPromptWarning=%S-i e pengoi këtë sajt (%S) t’ju kërkojë të instalojë "software" në kompjuterin tuaj.
 xpinstallPromptAllowButton=Lejoje
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
@@ -147,7 +147,7 @@ pluginActivate.updateLabel=Përditësojeni tani…
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
 pluginActivateVulnerable.message=%3$S-i e ka penguar shtojcën e pasigurt "%1$S" të xhirojë në %2$S.
 pluginActivateVulnerable.label=Shtojcë e cenueshme!
-pluginActivate.riskLabel=Ç'rrezik ka?
+pluginActivate.riskLabel=Ç’rrezik ka?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
 pluginActivateBlocked.message=%2$S-i bllokoi "%1$S" për mbrojtjen tuaj.
 pluginActivateBlocked.label=E bblokuar për mbrojtjen tuaj
@@ -349,8 +349,8 @@ geolocation.alwaysShareLocation=Lejoje Përherë Tregimin e Vendit
 geolocation.alwaysShareLocation.accesskey=P
 geolocation.neverShareLocation=Mos e Lejo Kurrë Tregimin e Vendit
 geolocation.neverShareLocation.accesskey=M
-geolocation.shareWithSite=Do të donit t'i tregonit vendin tuaj %S?
-geolocation.shareWithFile=Do të donit t'i tregonit vendin tuaj kartelës %S?
+geolocation.shareWithSite=Do të donit t’i tregonit vendin tuaj %S?
+geolocation.shareWithFile=Do të donit t’i tregonit vendin tuaj kartelës %S?
 
 webNotifications.showForSession=Shfaqi për këtë sesion
 webNotifications.showForSession.accesskey=S
@@ -437,7 +437,7 @@ syncPromoNotification.learnMoreLinkText=Mësoni Më Tepër
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons.description=Me %S mund t'i përdorni shtesat tuaja në krejt pajisjet tuaja.\u0020
+syncPromoNotification.addons.description=Me %S mund t’i përdorni shtesat tuaja në krejt pajisjet tuaja.\u0020
 # LOCALIZATION NOTE (syncPromoNotification.addons-sync-disabled.label):
 # This appears in the add-on install complete panel when Sync is set
 # but addons sync is not. %S will be replaced by syncBrandShortName.
@@ -446,7 +446,7 @@ syncPromoNotification.addons-sync-disabled.description=Mund të përdorni llogar
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S dërgon vetvetiu disa të dhëna te %2$S që të mund të përmirësojmë punimin e tij për ju.
-dataReportingNotification.button.label  = Zgjidhni Ç'Të Ndahet Me Të Tjerët
+dataReportingNotification.button.label  = Zgjidhni Ç’Të Ndahet Me Të Tjerët
 dataReportingNotification.button.accessKey  = Z
 
 # Webapps notification popup
