--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -161,6 +161,8 @@ PEInvalidVariableReference=Vetia përmbante referencë ndaj ndryshoreje të pëv
 PEExpectedVariableNameEOF=identifikues për emër ndryshoreje
 PEExpectedVariableName=Pritej identifikues për emër ndryshoreje, por u gjet '%1$S'.
 #PEExpectedVariableFallback=Expected variable reference fallback after ','.
+#PEExpectedVariableFallback=Pritej fallback për referencë ndryshoreje pas ','.
 PEExpectedVariableCommaOrCloseParen=Pritej ',' ose ')' pas emri ndryshoreje te referencë ndryshoreje, por u gjet '%1$S'.
 PEParseSourceSizeListEOF=vlerë gjatësie për kusht media me përputhje
 PEParseSourceSizeListNotComma=Pritej ',' pas vlere, por u gjet '%1$S'
+PECoordinatePair=Pritej dyshe koordinatash, por u gjet '%1$S'.
