--- a/fr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fr/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL a reçu des données d'extension NPN in
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Fonctionnalité SSL non gérée pour les connexions SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Fonctionnalité SSL non gérée pour les serveurs.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Fonctionnalité SSL non gérée pour les clients.
+SSL_ERROR_INVALID_VERSION_RANGE=La plage de versions SSL n'est pas valide.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Le pair SSL a sélectionné une suite de chiffrement non autorisée pour la version sélectionnée du protocole.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL a reçu un message d'établissement de liaison « Hello Verify Request » malformé.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL a reçu un message d'établissement de liaison « Hello Verify Request » inattendu.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=La fonctionnalité SSL n'est pas prise en charge pour cette version du protocole.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL a reçu un message d'établissement de liaison « Certificate Status » inattendu.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algorithme de hachage non pris en charge utilisé par le pair TLS.
+SSL_ERROR_DIGEST_FAILURE=La fonction de prétraitement a échoué.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algorithme de signature incorrect spécifié dans un élément signé numériquement.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=L'extension « next protocol negotiation » était activée, mais la fonction de rappel a été effacée avant d'avoir pu être utilisée.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Le serveur ne prend en charge aucun des protocoles annoncés par le client dans l'extension ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Le serveur a rejeté le message d'établissement de liaison car le client utilise désormais une version de TLS inférieure à la version minimale prise en charge par le serveur.
 SEC_ERROR_IO=Une erreur d'entrée/sortie est survenue pendant l'autorisation de sécurité.
 SEC_ERROR_LIBRARY_FAILURE=Échec de la bibliothèque de sécurité.
 SEC_ERROR_BAD_DATA=Bibliothèque de sécurité : données incorrectes reçues.
