--- a/fr/netwerk/necko.properties
+++ b/fr/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Vous êtes sur le point de visiter « %1$S ». Ce site peut être
 PhishingAuthAccept=J'ai compris et ferai attention.
 SuperfluousAuth=Vous êtes sur le point de vous connecter au site « %1$S » avec le nom d'utilisateur « %2$S », mais ce site web ne nécessite pas d'authentification. Il peut s'agir d'une tentative pour vous induire en erreur.\n\n« %1$S » est-il bien le site que vous voulez visiter ?
 AutomaticAuth=Vous êtes sur le point de vous connecter au site « %1$S » avec le nom d'utilisateur « %2$S ».
+
+TrackingUriBlocked=La ressource à l'adresse « %1$S » a été bloquée car la protection contre le pistage est activée.
