--- a/fr/browser/chrome/browser/devtools/timeline.properties
+++ b/fr/browser/chrome/browser/devtools/timeline.properties
@@ -38,3 +38,4 @@ timeline.records=ENREGISTREMENTS
 timeline.label.styles=Styles
 timeline.label.reflow=Reflow
 timeline.label.paint=Paint
+timeline.label.domevent=Évènement DOM
