Bug 1072894 - Implement polygon() parsing for clip-path

--- a/fr/dom/chrome/layout/css.properties
+++ b/fr/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Identificateur attendu pour l'extension system, mais «
 PECounterASWeight=Chaque poids du descripteur additive-symbols doit être inférieur au poids précédent.
 PEClassSelEOF=nom de classe
 PEClassSelNotIdent=Identifiant pour un sélecteur de classe attendu, mais « %1$S » trouvé.
+PECoordinatePair=Coordonnées attendues, mais « %1$S » trouvé.
 PETypeSelEOF=type d'élément
 PETypeSelNotType=Nom d'élément ou « * » attendu, mais « %1$S » trouvé.
 PEUnknownNamespacePrefix=Préfixe d'espace de noms « %1$S » inconnu.
