[qa][dom] Better l10n for get or set

--- a/fr/dom/chrome/dom/dom.properties
+++ b/fr/dom/chrome/dom/dom.properties
@@ -131,7 +131,7 @@ PrefixedVisibilityApiWarning=Les propriétés « mozHidden » et « mozVisibi
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
 NodeIteratorDetachWarning=Appeler detach() sur un NodeIterator n'a plus aucun effet.
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
-LenientThisWarning=Obtention ou définition des propriétés possédant [LenientThis] ignorées car l'objet « this » est incorrect.
+LenientThisWarning=Lecture ou assignation des propriétés possédant [LenientThis] ignorées car l'objet « this » est incorrect.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
 GetWindowWithOuterIdWarning=L'utilisation de nsIDOMWindowUtils.getOuterWindowWithId() est obsolète. À la place, utilisez la méthode nsIWindowMediator du même nom.
 # LOCALIZATION NOTE: Do not translate "getPreventDefault" or "defaultPrevented".
