[toolkit] Bug 1086252 - Show stable client id in about:telemetry

--- a/fr/toolkit/chrome/global/aboutTelemetry.properties
+++ b/fr/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Cette page affiche les informations collectées par télémétrie concernant les performances, les caractéristiques matérielles, l'utilisation des fonctionnalités et la personnalisation du navigateur. Ces informations sont envoyées à %1$S pour aider à l'amélioration de %2$S.
 
+generalDataHeadingName = Nom
+
+generalDataHeadingValue = Valeur
+
 slowSqlMain = Requêtes SQL lentes dans le fil d'exécution principal (main thread)
 
 slowSqlOther = Requêtes SQL lentes dans les fils d'exécution assistants (helper threads)
