--- a/hu/suite/chrome/mailnews/charsetTitles.properties
+++ b/hu/suite/chrome/mailnews/charsetTitles.properties
@@ -15,6 +15,7 @@ iso-8859-1.title    = Nyugati (ISO-8859-1)
 iso-8859-2.title    = Közép-európai (ISO-8859-2)
 iso-8859-3.title    = Dél-európai (ISO-8859-3)
 iso-8859-4.title    = Balti (ISO-8859-4)
+iso-8859-9.title    = Török (ISO-8859-9)
 iso-8859-10.title   = Skandináv (ISO-8859-10)
 iso-8859-13.title   = Balti (ISO-8859-13)
 iso-8859-14.title   = Kelta (ISO-8859-14)
@@ -62,6 +63,8 @@ windows-1258.title = Vietnami (Windows-1258)
 x-viet-tcvn5712.title = Vietnami (TCVN)
 viscii.title = Vietnami (VISCII)
 x-viet-vps.title = Vietnami (VPS)
+tis-620.title = Thai (TIS-620)
+iso-8859-11.title = Thai (ISO-8859-11)
 windows-874.title = Thai (Windows-874)
 ibm874.title = Thai (IBM-874)
 armscii-8.title = Örmény (ARMSCII-8)
