Bug 1034114 - Defer remote debugger initialization via notification.

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Luisteren op poort %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Debugging voor %S activeren
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Raak aan om remote debugger te activeren
 
 # Helper apps
 helperapps.open=Openen
