--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -393,4 +393,4 @@ feedHandler.subscribeWith=Abonneren met
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%S wordt niet meer ondersteund. Gebruik in plaats daarvan %S
+nativeWindow.deprecated=%1$S wordt niet meer ondersteund. Gebruik in plaats daarvan %2$S
