Find new accesskey for Performance (ex-Profiler). MOZILLA-121

--- a/hu/browser/chrome/browser/devtools/profiler.properties
+++ b/hu/browser/chrome/browser/devtools/profiler.properties
@@ -22,7 +22,7 @@ profiler.panelLabel2=Teljesítmény panel
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
-profiler.accesskey=P
+profiler.accesskey=m
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
